java -> 21 + cleanup